<resources>
    <string name="app_name"><b>TechGlaz</b></string>
    <string name="nav_open"> Open Navigation drawer</string>
    <string name="nav_close"> Close Navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_web_client_id">"329781533743-f5a6cj2sn460nhl11mse273hlhm3fd5n.apps.googleusercontent.com"</string>
    <string name="aurdino_title">Arduino (Price-2000 INR)</string>
    <string name="iot_title">IoT(Price-3000 INR)</string>
    <string name="robotics_title">Autonomous and Wireless Robotics (Price-2500INR)</string>
    <string name="embeddedSystem_title">Embedded System (Price-3500 INR)</string>
    <string name="java_title">Java (Price-3000 INR)</string>
    <string name="webDevelopment_title">Web Development (Price-4000 INR)</string>
    <string name="appDevelopment_title">App Development (Price-4000 INR)</string>
    <string name="aurdino_des">From Basics to Mastery: Unlock the Power of Arduino. This comprehensive course guides you through practical applications of programming concepts in embedded systems, enabling you to create 10+ projects with the potential for over 100 more..</string>
    <string name="iot_des">Unleash the Potential of IoT with ESP32: Master Wireless Communication, Sensor Integration, and Cloud Connectivity for Cutting-Edge IoT Solutions.</string>
    <string name="robotics_des">Embark on a Journey into Autonomous and Wireless Robotics: Learn to Build, Program, and Control Robots with Cutting-Edge Technology. Our Course Equips You with the Skills to Create Robots that Navigate and Interact with the World Independently.</string>
    <string name="embeddedSystem_des">Discover the World of Embedded Systems with Arduino: Dive into the Core of Electronics and Programming. Learn to Design and Implement Smart, Efficient Systems for Real-World Applications.</string>
    <string name="java_des">Unlock the Power of Java with Our Comprehensive Courses: From Fundamentals to Advanced Concepts, Master the Language Behind Web Development, Mobile Apps, and Enterprise Software Solutions.</string>
    <string name="webDevelopment_des">Empower Your Web Development Journey with HTML, CSS, and JavaScript: Learn to Create Stunning Websites and Dynamic Web Applications. Our Courses Cover Everything from Frontend Design to Backend.</string>
    <string name="androidDevelopment_des">Embark on Your App Development Journey: Learn to Build Engaging and Functional Applications for Mobile and Web Platforms. Our Courses Cover App Design, Development, and Deployment Across iOS, Android, and Web Environments.</string>
    <string name="about_string1">Techglaz is a leading provider of innovative and practical education solutions in the
        fields of Robotics, Arduino, and IoT. Our mission is to transform traditional learning methods by providing hands-on
        training that empowers students to become skilled engineers and problem solvers.</string>
    <string name="about_string2">Founded by Nishant Kumar, an accomplished robotics expert and educator,
        Techglaz is committed to providing high-quality education that inspires creativity and innovation.
        With a team of experienced technologists, we aim to bridge the gap between theoretical knowledge and practical application,
        helping students develop real-world skills that are in demand in today’s job market.</string>
    <string name="about_string3">At Techglaz, we believe that every learner has the potential to become a knowledge wizard.
        That’s why we offer a range of workshops and training programs designed to cater to students of all ages and skill levels.
        Whether you’re a beginner looking to explore the world of robotics or an experienced engineer seeking to enhance your skills,
        Techglaz has something for you.</string>
    <string name="about_string4">Join us on a journey of discovery and learning. Let’s unlock your potential together at Techglaz.</string>
    <string name="about_string5">“Founder and CEO of Techglaz Lab Pvt. Ltd., is a distinguished leader with a strong track record.
        Recognized by the Japan Science and Technology Agency (JST) and invited by KIO University, Japan, he has excelled in robotics,
        winning gold at the World Skill Day competition and topping the Inspire Awards and many State and National Competition.
        Nishant’s commitment to innovation is evident through his participation in the Japan Sakura Science Programme .”</string>
    <string name="about_string6">We offer advanced training in robotics and embedded systems to renowned institutions such as
        IIT Bombay and NIT Arunachal. By equipping students with future-focused skills, we empower them to thrive in emerging
        technologies and shape the future landscape of innovation.</string>
    <string name="about_string7">Empowering Learners, Inspiring Innovators:\n Techglaz Labs .</string>
    <string name="contactUs_string1">Contact us for High Quality Workshop and Training</string>
    <string name="contactUs_address"><b>Village:</b> Ank Villa,\n<b>City:</b> Sabour,\n<b>District:</b> Bhagalpur,\n<b>State:</b> Bihar,\n<b>Pincode:</b> 813210</string>
    <string name="contactUs_phone">Call us at : \n<a href="+91 6204696995"><b>+91 6204696995</b></a></string>
    <string name="contactUs_email">Mail us at : \n<a href="techglazlabspvtltd@gmail.com"><b> techglazlabspvtltd@gmail.com</b></a></string>
</resources>