<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AboutFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       >

        <ImageView
            android:id="@+id/about_img1"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/techglaz_logo"
            />

        <TextView
            android:id="@+id/about_tv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Techglaz Labs!"
            android:textAlignment="center"
            android:layout_below="@id/about_img1"
            android:fontFamily="sans-serif-black"
            android:layout_marginTop="10dp"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/about_tv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="let’s create your own future"
            android:textSize="16sp"
            android:layout_below="@id/about_tv1"
            android:textAlignment="center"
            android:fontFamily="sans-serif-medium"
            android:layout_marginBottom="5dp"
            />

            <LinearLayout
                android:id="@+id/about_ll1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:layout_below="@id/about_tv2"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="About Us"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:padding="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_string1"
                    android:textSize="15dp"
                    android:padding="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_string2"
                    android:textSize="15dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_string3"
                    android:padding="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textStyle="bold"
                    android:text="@string/about_string4"
                    />
            </LinearLayout>

        <ImageView
            android:id="@+id/divider_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/divider"
            android:layout_marginHorizontal="15dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/about_ll1"/>

            <LinearLayout
                android:id="@+id/about_ll2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@id/about_ll1"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Know The Founder"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:padding="10dp"/>

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/founder"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Nishant Kumar"
                    android:layout_gravity="center"
                    android:textSize="20dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/about_string5"
                    />
            </LinearLayout>

        <ImageView
            android:id="@+id/divider_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/divider"
            android:layout_marginHorizontal="15dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/about_ll2"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_ll2"
            android:orientation="vertical"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Our work"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/about_string6"
                />

            <include
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_below="@id/home_tv1"
                android:id="@+id/about_glimpses"
                layout="@layout/glimpses_viewflipper"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:textStyle="bold"
                android:lineSpacingExtra="2dp"
                android:text="@string/about_string7"
                android:textAlignment="center"
                android:layout_marginVertical="10dp"
                />

        </LinearLayout>

    </RelativeLayout>
    </ScrollView>

</FrameLayout>